fixed alignment

--- a/src/app/hero-banner/hero-banner.module.css
+++ b/src/app/hero-banner/hero-banner.module.css
@@ -16,7 +16,7 @@
   text-align: center;
   top: 235px;
   @media screen and (max-width: 767px) {
-    padding: 0 4rem;
+    padding: 0 2rem;
   }
 }
 
